Testing to fix the problem of reason-image not center aligned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,8 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-h1, 
-h2, 
+h1,
+h2,
 h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
@@ -47,10 +47,10 @@ header a {
 #menu {
     font-size: 110%;
     letter-spacing: 4px;
-    list-style-type: none;   
+    list-style-type: none;  
 }
 
-#menu > li {
+#menu>li {
     margin-bottom: 1em;
 }
 
@@ -111,8 +111,8 @@ main {
     padding-left: 10px;
 }
 
-#cover-text > h2, 
-#cover-text > h3 {
+#cover-text>h2, 
+#cover-text>h3 {
     color: #ffffff;
 }
 
@@ -128,8 +128,8 @@ main {
     font-size: 280%;
 }
 
-#benefits-physical > div, 
-#benfits-mental > div {
+#benefits-physical>div, 
+#benfits-mental>div {
     line-height: 20px;
     margin-bottom: 20px;
 }
@@ -148,7 +148,7 @@ main {
     height: 90vw;
     width: 90vw;
     margin-bottom: 20px;
-    /*  Makes the square image into a circle */
+    /* Makes the square image into a circle */
     border-radius: 50%;
     max-width: 300px;
     max-height: 300px;
@@ -185,11 +185,11 @@ main {
         width: fit-content;
         padding-right: 1rem;
     }
-    
+
     #menu {
         display: flex;
     }
-    
+
     #menu>li {
         padding-left: 1rem;
     }
@@ -234,11 +234,11 @@ main {
         align-self: flex-end;
     }
 
- }
+}
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
-    #menu a:hover{
+    #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
 }
@@ -269,3 +269,4 @@ main {
     #benefits-physical > div {
         align-self: flex-end;
     }
+}
